code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_22.wast
(assert_invalid
  (module (func $type-then-value-num-vs-void-else
    (if (i32.const 1) (then (i32.const 1)) (else))
  ))
  "type mismatch"
)